--- a/package.json
+++ b/package.json
@@ -1,33 +1,44 @@
 {
-    "name": "admin-pro",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "vite --mode development",
-        "build": "vite build"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "axios": "^1.6.3",
-        "element-plus": "^2.4.4",
-        "nprogress": "^0.2.0",
-        "pinia": "^2.1.7",
-        "pinia-plugin-persistedstate": "^3.2.1",
-        "vue": "^3.4.3",
-        "vue-router": "^4.2.5"
-    },
-    "devDependencies": {
-        "@types/node": "^20.10.6",
-        "@types/nprogress": "^0.2.3",
-        "@vitejs/plugin-vue": "^5.0.2",
-        "@vitejs/plugin-vue-jsx": "^3.1.0",
-        "eslint": "^8.56.0",
-        "eslint-plugin-vue": "^9.19.2",
-        "less": "^4.2.0",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.10",
-        "vue-tsc": "^1.8.27"
-    }
+	"name": "admin-pro",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "vite --mode development",
+		"build": "vite build",
+		"lint:eslint": "eslint --cache --max-warnings 0 \"{src,mock}/**/*.{vue,ts}\" --fix",
+		"lint:prettier": "prettier --write **/*.{js,json,tsx,css,less,scss,vue,html,md}"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.6.3",
+		"element-plus": "^2.4.4",
+		"nprogress": "^0.2.0",
+		"pinia": "^2.1.7",
+		"pinia-plugin-persistedstate": "^3.2.1",
+		"vue": "^3.4.3",
+		"vue-router": "^4.2.5"
+	},
+	"devDependencies": {
+		"@eslint/create-config": "^0.4.6",
+		"@types/node": "^20.10.6",
+		"@types/nprogress": "^0.2.3",
+		"@typescript-eslint/eslint-plugin": "^6.4.0",
+		"@vitejs/plugin-vue": "^5.0.2",
+		"@vitejs/plugin-vue-jsx": "^3.1.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-config-standard-with-typescript": "^43.0.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+		"eslint-plugin-prettier": "^5.1.2",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-vue": "^9.19.2",
+		"less": "^4.2.0",
+		"prettier": "^3.1.1",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.10",
+		"vue-tsc": "^1.8.27"
+	}
 }
