--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "my-admin-pro",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vite --mode development",
-    "build": "vite build --mode production"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.6.5",
-    "element-plus": "^2.4.4",
-    "nprogress": "^0.2.0",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.1",
-    "vue": "^3.4.5",
-    "vue-router": "^4.2.5"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-vue": "^5.0.2",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "less": "^4.2.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27"
-  }
+    "name": "my-admin-pro",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "vite --mode development",
+        "build": "vite build --mode production",
+        "lint:eslint": "eslint --cache --max-warnings 0 --fix \"src/**/*.ts\"",
+        "lint:eslint2": "eslint --max-warnings 0 --cache ./src/**.{vue,ts} --fix"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^1.6.5",
+        "element-plus": "^2.4.4",
+        "nprogress": "^0.2.0",
+        "pinia": "^2.1.7",
+        "pinia-plugin-persistedstate": "^3.2.1",
+        "vue": "^3.4.5",
+        "vue-router": "^4.2.5"
+    },
+    "devDependencies": {
+        "@eslint/create-config": "^0.4.6",
+        "@types/node": "^20.10.6",
+        "@types/nprogress": "^0.2.3",
+        "@typescript-eslint/eslint-plugin": "^6.18.0",
+        "@typescript-eslint/parser": "^6.18.0",
+        "@vitejs/plugin-vue": "^5.0.2",
+        "@vitejs/plugin-vue-jsx": "^3.1.0",
+        "eslint": "^8.56.0",
+        "eslint-plugin-vue": "^9.19.2",
+        "less": "^4.2.0",
+        "typescript": "^5.3.3",
+        "vite": "^5.0.11",
+        "vue-tsc": "^1.8.27"
+    }
 }
