--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite --mode development",
         "build": "vite build --mode production",
-        "lint:eslint": "eslint --cache --max-warnings 0 --fix \"src/**/*.ts\"",
+        "lint:eslint": "eslint --cache --max-warnings 0 --fix \"src/**/*.{vue,ts}\"",
         "lint:eslint2": "eslint --max-warnings 0 --cache ./src/**.{vue,ts} --fix"
     },
     "keywords": [],
