--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "vite --mode development",
     "build": "vite build --mode production",
     "lint:eslint": "eslint --cache --max-warnings 0 --fix \"src/**/*.{vue,ts}\"",
-    "lint:eslint2": "eslint --max-warnings 0 --cache ./src/**.{vue,ts} --fix",
     "lint:prettier": "prettier --write \"**/*.{ts,js,json,less,vue,html}\"",
-    "lint:prettier2": "prettier --write **/*.{js,json,less,vue,html}"
+    "prepare": "husky install",
+    "lint:lint-staged": "lint-staged"
   },
   "keywords": [],
   "author": "",
@@ -34,10 +34,34 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.19.2",
+    "husky": "^8.0.3",
     "less": "^4.2.0",
+    "lint-staged": "^15.2.0",
     "prettier": "3.1.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
+      "prettier --write--parser json"
+    ],
+    "package.json": [
+      "prettier --write"
+    ],
+    "*.vue": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{scss,less,styl,html}": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
   }
 }
