--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
     "@eslint/create-config": "^0.4.6",
     "@types/node": "^20.10.6",
     "@types/nprogress": "^0.2.3",
