--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,7 @@
-# axios请求的 baseURL
-VITE_APP_DEV_USE_MOCK=true
-VITE_APP_API_BASEURL=/api
-VITE_APP_MOCK_BASEURL=/mock/api
+# VITE_APP_BASE_API = /api
+# 后端接口的根路径
+VITE_APP_API_BASEURL = /api
+# 需要模拟的请求根路径
+VITE_APP_MOCK_BASEURL = /mock/api
+# 选择 development 模式下是否开启 mock
+VITE_APP_DEV_USE_MOCK = true
