--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.5",
     "element-plus": "^2.4.4",
     "nprogress": "^0.2.0",
@@ -42,6 +43,10 @@
     "mockjs": "^1.1.0",
     "prettier": "3.1.1",
     "typescript": "^5.3.3",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-element-plus": "^0.8.0",
+    "unplugin-icons": "^0.18.1",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vite-plugin-mock": "^3.0.1",
     "vue-tsc": "^1.8.27"
