--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
     "@eslint/create-config": "^0.4.6",
+    "@iconify-json/ep": "^1.1.14",
     "@types/node": "^20.10.6",
     "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
