feat: 新增单元测试

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,6 +58,7 @@
     "build/**/*.ts",
     "build/**/*.d.ts",
     "mock/**/*.ts",
+    "test/*.test.ts",
     "vite.config.ts"
   ],
   // 指定不需要编译的文件
