--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "vitest",
     "dev": "vite --mode development",
     "build": "vite build --mode production",
     "lint:eslint": "eslint --cache --max-warnings 0 --fix \"src/**/*.{vue,ts}\"",
@@ -49,6 +50,7 @@
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vite-plugin-mock": "^3.0.1",
+    "vitest": "^1.2.0",
     "vue-tsc": "^1.8.27"
   },
   "lint-staged": {
