--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest",
+    "test": "vitest --reporter=verbose",
     "dev": "vite --mode development",
     "build": "vite build --mode production",
     "lint:eslint": "eslint --cache --max-warnings 0 --fix \"src/**/*.{vue,ts}\"",
